tests/expectations/compiler/operations/add_type_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected a field, group, scalar, or integer but type `bool` was found.
    --> compiler-test:5:17
     |
   5 |         return (true + false) as u8;
     |                 ^^^^
Error [ETYC0372117]: Expected a field, group, scalar, or integer but type `bool` was found.
    --> compiler-test:5:24
     |
   5 |         return (true + false) as u8;
     |                        ^^^^^
"""]
